st-theme-node: Don't update resources on each paint

Up to commit 318283fc705bd9e9, resources were only updated when
the allocated size had changed. There is no good reason to change
this for theme nodes without box shadows.

https://bugzilla.gnome.org/show_bug.cgi?id=703909